<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/app_bg"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_registration"
            android:id="@+id/textView"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:background="@drawable/edittext_bg"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_margin="15dp"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonRegister"
            android:text="@string/register_user"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_registered_sign_in_here"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>