<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report_PotholeActivity"
    android:background="#fffeef">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layouttool"
        android:background="#0078C9">

        <ImageView
            android:layout_margin="2dp"
            android:id="@+id/backreport"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />

        <TextView
            android:layout_toEndOf="@id/backreport"
            android:id="@+id/report_head"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_potholes"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#fff"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layouttool"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/capture_image"
        android:background="@drawable/button_bg_report"/>

    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnCaptureImage"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/confirm_and_upload"
        android:background="@drawable/button_bg_report"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_below="@id/btnUploadImage"
        android:scaleType="fitXY" />


</RelativeLayout>